--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
 	<div data-role="content">	
 		<input id="zip-code" type="text" value="Enter zip code..." />
+		<div id="or" data-inline="true">Or</div>
 		<select id="city">
 			<option value="">{Select City}</option>
-			<option>Adamant</option>
-			<option>Addison</option>
-			<option>Albany</option>
+			<option value="adamant">Adamant</option>
+			<option value="addison">Addison</option>
+			<option value="albany">Albany</option>
 		</select>
+
+		<div id="separator"></div>
 
 		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Browse Category</a>
 		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Keyword</a>
