--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>My Page</title> 
+	<title>Dashboard</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -29,7 +29,7 @@
 
 		<div id="separator"></div>
 
-		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Browse Category</a>
+		<a href="browse-category.html" class="dashboard-btn" data-role="button" data-theme="b">Browse Category</a>
 		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Keyword</a>
 		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Name</a>		
 	</div><!-- /content -->
