Add dummy data to Baby Clothing category

--- a/browse-category.html
+++ b/browse-category.html
@@ -7,7 +7,7 @@
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
+	<link rel="stylesheet" type="text/css" href="assets/stylesheets/custom.css">
 </head> 
 <body> 
 
@@ -50,7 +50,7 @@
 
 	<div data-role="content">	
 		<ul data-role="listview" data-theme="d">
-			<li><a href="#">Baby Clothing</a></li>
+			<li><a href="baby-clothing.html" data-transition="slide">Baby Clothing</a></li>
 			<li><a href="#">Clothing Vouchers</a></li>
 			<li><a href="#">Diapers</a></li>
 			<li><a href="#">Formal Wear</a></li>
