Add phone and address buttons with directions and calling functions

--- a/baby-clothing.html
+++ b/baby-clothing.html
@@ -16,31 +16,42 @@
 	<div data-role="header">
 		<a href="#" data-rel="back" data-icon="arrow-l" data-theme="a">Back</a>
 		<h1>Baby Clothing</h1>
+		<a href="#" data-role="button" data-theme="a">Map View</a>
 	</div><!-- /header -->
 
 	<div data-role="content">	
 		<div class="container odd">
 			<h2>Pregnancy Center of the Upper Valley - West Lebanon Office</h2>
 			<h3>Pregnancy Center of the Upper Valley- Claremont Office</h3>
-			<p class="address">
+			<a href="https://maps.google.com/maps?daddr=24+Opera+House+Square,+Claremont,+NH+03742" data-role="button" rel="external" target="_blank" class="address">
 				24 Opera House Square <br />
 				Moody Building <br />
 				Claremont, NH 03742 <br />
-			</p>
-			<p class="phone">(603) 542-4747 Information & Services</p>
-			<p class="phone">(800) 395-4357 After Hours National Helpline</p>
-			<p class="phone">(603) 298-6057 Fax</p>
+			</a>
+			<a href="tel:60354247474" data-role="button" class="phone">(603) 542-4747 Information & Services</a>
+			<a href="tel:8003954357" data-role="button" class="phone">(800) 395-4357 After Hours National Helpline</a>
+			<p class="fax">(603) 298-6057 Fax</p>
 		</div><!-- container -->
 
 		<div class="container even">
 			<h2>Pregnancy Center of the Upper Valley - West Lebanon Office</h2>
-			<p class="address">
+			<a href="https://maps.google.com/maps?daddr=1+Main+St,+West+Lebanon,+NH+03784" data-role="button" rel="external" target="_blank" data-role="button" class="address">
 				1 Maint Street, Suit 2 <br />
 				West Lebanon, NH 03784
-			</p>
-			<p class="phone">(603) 298-6123 Information & Services</p>
-			<p class="phone">(800) 395-4357 After Hours National Helpline</p>
-			<p class="phone">(603) 298-6057 Fax</p>
+			</a>
+			<a href="tel:6032986123" data-role="button" class="phone">(603) 298-6123 Information & Services</a>
+			<a href="tel:8003954357" data-role="button" class="phone">(800) 395-4357 After Hours National Helpline</a>
+			<p class="fax">(603) 298-6057 Fax</p>
+		</div><!-- container -->
+
+		<div class="container odd">
+			<h2>Care Net Pregnancy Center of Central Vermont</h2>
+			<a href="https://maps.google.com/maps?daddr=15+Ayers+St,+Barre,+VT+05641" data-role="button" rel="external" target="_blank" data-role="button" class="address">
+				15 Ayers Street <br />
+				Barre, VT 05641
+			</a>
+			<a href="tel:8024799215" data-role="button" class="phone">(802) 479-9215 & Services</a>
+			<a href="tel:8003954357" data-role="button" class="phone">(800) 395-4357 After Hours National Helpline</a>
 		</div><!-- container -->
 	</div><!-- /content -->
 
