--- a/browse-category.html
+++ b/browse-category.html
@@ -8,13 +8,13 @@
 	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/custom.css">
-</head> 
+	</head> 
 <body> 
 
 <div data-role="page" id="browse-category">
 
 	<div data-role="header">
-		<a href="index.html" data-rel="back" data-icon="arrow-l" data-theme="a">Back</a>
+		<a href="#" data-rel="back" data-icon="arrow-l" data-theme="a">Back</a>
 		<h1>Browse Category</h1>
 	</div><!-- /header -->
 
