--- a/baby-clothing.html
+++ b/baby-clothing.html
@@ -7,8 +7,7 @@
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
 	<script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCzdylLUlVrZ2fytsRwyBXNKDuAOgVhN5M&sensor=true">
-    </script>
+      src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 	<script type="text/javascript" src="assets/javascripts/map-view.js"></script>
 
@@ -21,13 +20,13 @@
 	<div data-role="header">
 		<a href="#" data-rel="back" data-icon="arrow-l" data-theme="a">Back</a>
 		<h1>Baby Clothing</h1>
-		<a href="#map-view" data-role="button" data-theme="a" data-transition="flip">Map View</a>
+		<a id="go-map-view" href="#map-view" data-role="button" data-theme="a" data-transition="flip">Map View</a>
 	</div><!-- /header -->
 
 	<div data-role="content">	
 		<div class="container odd">
 			<h2>Pregnancy Center of the Upper Valley - West Lebanon Office</h2>
-			<h3>Pregnancy Center of the Upper Valley- Claremont Office</h3>
+			<h3>Pregnancy Center of the Upper Valley - Claremont Office</h3>
 			<a href="https://maps.google.com/maps?daddr=24+Opera+House+Square,+Claremont,+NH+03742" data-role="button" rel="external" target="_blank" class="address">
 				24 Opera House Square <br />
 				Moody Building <br />
@@ -71,10 +70,55 @@
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<div id="map-view"></div>	
+		<div id="map" style="width: 500px; height: 400px; margin: 0;"></div>
+
+		  <script type="text/javascript">
+		  //http://stackoverflow.com/questions/3059044/google-maps-js-api-v3-simple-multiple-marker-example
+		  	var locations;
+
+		    navigator.geolocation.getCurrentPosition(function(position) {
+				locations = [
+			      ['Pregnancy Center of the Upper Valley - Claremont Office', 43.3728869, -72.3381952, 3],
+			      ['Pregnancy Center of the Upper Valley - West Lebanon Office', 43.3728869, -72.3092939, 4],
+			      ['Care Net Pregnancy Center of Central Vermont', 44.190655, -72.497414, 2],
+			      ['Your location', position.coords.latitude, position.coords.longitude, 1]
+			    ];
+				
+
+
+			    var map = new google.maps.Map(document.getElementById('map'), {
+			      zoom: 7,
+			      center: new google.maps.LatLng(43.65, -72.30),
+			      mapTypeId: google.maps.MapTypeId.ROADMAP
+			    });
+
+			    var infowindow = new google.maps.InfoWindow();
+
+			    var marker, i;
+
+			    for (i = 0; i < locations.length; i++) {  
+			      marker = new google.maps.Marker({
+			        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+			        map: map
+			      });
+
+			      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+			        return function() {
+			          infowindow.setContent(locations[i][0]);
+			          infowindow.open(map, marker);
+			        }
+			      })(marker, i));
+			    }
+		    });
+		  </script>
+	
 	</div><!-- /content -->
 
 </div><!-- end map-view page -->
+
+<div data-role="page" id="individual-map">
+	
+</div><!-- end individual-map page -->
 
 </body>
 </html>
