Add footers with link to home page

--- a/baby-clothing.html
+++ b/baby-clothing.html
@@ -66,6 +66,11 @@
 		</div><!-- container -->
 	</div><!-- /content -->
 
+	<div data-role="footer">
+		<a href="index.html" data-role="button" data-icon="home" data-theme="a" data-iconpos="notext">Home</a>
+		<h1>Vermont 2-1-1</h1>
+	</div><!-- footer -->
+
 </div><!-- end baby-clothing page -->
 
 
@@ -123,6 +128,11 @@
 	
 	</div><!-- /content -->
 
+	<div data-role="footer">
+		<a href="index.html" data-role="button" data-icon="home" data-theme="a" data-iconpos="notext">Home</a>
+		<h1>Vermont 2-1-1</h1>
+	</div><!-- footer -->
+
 </div><!-- end map-view page -->
 
 <div data-role="page" id="individual-map">
@@ -135,6 +145,11 @@
 	<div data-role="content">
 		<div id="map-canvas" style="width: 500px; height: 400px; margin: 0;"></div>
 	</div><!-- /content -->
+
+	<div data-role="footer">
+		<a href="index.html" data-role="button" data-icon="home" data-theme="a" data-iconpos="notext">Home</a>
+		<h1>Vermont 2-1-1</h1>
+	</div><!-- footer -->
 
 </div><!-- end individual-map page -->
 
