--- a/browse-category.html
+++ b/browse-category.html
@@ -39,6 +39,11 @@
 		</ul>
 	</div><!-- /content -->
 
+	<div data-role="footer">
+		<a href="index.html" data-role="button" data-icon="home" data-theme="a" data-iconpos="notext">Home</a>
+		<h1>Vermont 2-1-1</h1>
+	</div><!-- footer -->
+
 </div><!-- end browse-category page -->
 
 <div data-role="page" id="basic-needs-sublist">
@@ -62,6 +67,11 @@
 			<li><a href="#">Office Supplies</a></li>
 		</ul>
 	</div><!-- /content -->
+
+	<div data-role="footer">
+		<a href="index.html" data-role="button" data-icon="home" data-theme="a" data-iconpos="notext">Home</a>
+		<h1>Vermont 2-1-1</h1>
+	</div><!-- footer -->
 
 </div><!-- end basic-needs-sublist page -->
 
