Add Search by Keyword page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div id="separator"></div>
 
 		<a href="browse-category.html" class="dashboard-btn" data-role="button" data-theme="b">Browse Category</a>
-		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Keyword</a>
+		<a href="search-by-keyword.html" class="dashboard-btn" data-role="button" data-theme="b">Search by Keyword</a>
 		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Name</a>		
 	</div><!-- /content -->
 
