Finish basic layout for Search by Keyword

--- a/search-by-keyword.html
+++ b/search-by-keyword.html
@@ -15,10 +15,12 @@
 
 	<div data-role="header">
 		<h1>Search by Keyword</h1>
+		<input data-mini="true" data-theme="b" type="search" name="search" id="search-by-keyword" value="" />
 	</div><!-- /header -->
 
 	<div data-role="content">	
-			
+
+		<i>If you get too many responses try entering a more specific phrase. For example, try <b>credit counseling</b> or <b>parent counseling</b> instead of <b>counseling</b>.</i>
 	</div><!-- /content -->
 
 	<div data-role="footer">
