Finish basic layout for Search by Name section

--- a/search-by-name.html
+++ b/search-by-name.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Search by Keyword</title> 
+	<title>Search by Name</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
@@ -15,13 +15,14 @@
 
 	<div data-role="header">
 		<a href="#" data-rel="back" data-icon="arrow-l" data-theme="a">Back</a>
-		<h1>Search by Keyword</h1>
-		<input data-mini="true" data-theme="b" type="search" name="search" id="search-by-keyword" value="" />
+		<h1>Search by Name</h1>
+		<input data-mini="true" data-theme="b" type="search" name="search" id="search-by-name" value="" />
 	</div><!-- /header -->
 
 	<div data-role="content">	
 
-		<i>If you get too many responses try entering a more specific phrase. For example, try <b>credit counseling</b> or <b>parent counseling</b> instead of <b>counseling</b>.</i>
+		Type a word or phrase to find a specific agency or program <br />
+		<b>Examples:</b>  <i>Head Start, AARP, Red Cross, United Way, WIC, YMCA</i>
 	</div><!-- /content -->
 
 	<div data-role="footer">
