--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<a href="browse-category.html" class="dashboard-btn" data-role="button" data-theme="b">Browse Category</a>
 		<a href="search-by-keyword.html" class="dashboard-btn" data-role="button" data-theme="b">Search by Keyword</a>
-		<a href="#" class="dashboard-btn" data-role="button" data-theme="b">Search by Name</a>		
+		<a href="search-by-name.html" class="dashboard-btn" data-role="button" data-theme="b">Search by Name</a>		
 	</div><!-- /content -->
 
 </div><!-- end dashboard page -->
